Fixed toggle bar alignment and modal headings

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Viga&display=swap');
+
 body {
+    font-family: "Viga", sans-serif !important;
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    font-family: "Viga", sans-serif;
+    box-sizing: border-box;
 }
 
 header h1 {
@@ -198,6 +201,24 @@ nav a:hover {
 
     .small-screen a {
         font-weight: 500;
+    }
+
+    nav .container-fluid {
+        flex-wrap: wrap;
+    }
+
+    .navbar-brand {
+        order: 1;
+    }
+
+    .navbar-toggler {
+        order: 2;
+        margin-left: auto;
+    }
+
+    .collapse.navbar-collapse {
+        order: 3;
+        width: 100%;
     }
 }
 
